add nested split to the right

--- a/include/ignition/gui/resources.qrc
+++ b/include/ignition/gui/resources.qrc
@@ -6,6 +6,7 @@
 
   <file>qml/IgnCard.qml</file>
   <file>qml/IgnSpinBox.qml</file>
+  <file>qml/IgnSplit.qml</file>
   <file>qml/Main.qml</file>
   <file>qml/PluginMenu.qml</file>
   <file>qml/SideDrawer.qml</file>
