--- a/include/ignition/gui/resources.qrc
+++ b/include/ignition/gui/resources.qrc
@@ -5,6 +5,8 @@
   <file>qtquickcontrols2.conf</file>
 
   <file>qml/IgnCard.qml</file>
+  <file>qml/IgnCardSettings.qml</file>
+  <file>qml/IgnRulers.qml</file>
   <file>qml/IgnSpinBox.qml</file>
   <file>qml/Main.qml</file>
   <file>qml/PluginMenu.qml</file>
