--- a/include/ignition/gui/resources.qrc
+++ b/include/ignition/gui/resources.qrc
@@ -6,6 +6,7 @@
 
   <file>qml/IgnCard.qml</file>
   <file>qml/IgnCardSettings.qml</file>
+  <file>qml/IgnHelpers.qml</file>
   <file>qml/IgnRulers.qml</file>
   <file>qml/IgnSpinBox.qml</file>
   <file>qml/IgnSplit.qml</file>
