add new double spinbox

--- a/include/ignition/gui/resources.qrc
+++ b/include/ignition/gui/resources.qrc
@@ -7,6 +7,7 @@
   <file>qml/IgnHelpers.qml</file>
   <file>qml/IgnRulers.qml</file>
   <file>qml/IgnSpinBox.qml</file>
+  <file>qml/IgnDoubleSpinBox.qml</file>
   <file>qml/IgnSplit.qml</file>
   <file>qml/Main.qml</file>
   <file>qml/PluginMenu.qml</file>
