Consolidate Scene3D with ign-gazebo's GzScene3D
Signed-off-by: ahcorde <ahcorde@gmail.com>

--- a/include/ignition/gui/resources.qrc
+++ b/include/ignition/gui/resources.qrc
@@ -12,6 +12,7 @@
   <file>qml/Main.qml</file>
   <file>qml/PlottingInterface.qml</file>
   <file>qml/PluginMenu.qml</file>
+  <file>qml/Scene3D.qml</file>
   <file>qml/SideDrawer.qml</file>
   <file>qml/StandaloneDialog.qml</file>
   <file>qml/StyleDialog.qml</file>
