use qmldir to define QML module with IgnSpinBox
Signed-off-by: William Wedler <william.wedler@resquared.com>

--- a/include/ignition/gui/resources.qrc
+++ b/include/ignition/gui/resources.qrc
@@ -20,4 +20,8 @@
   <file>qml/images/menu.png</file>
   <file>qml/images/search.svg</file>
 </qresource>
+<qresource prefix="ign-gui-qml/ignition/gui">
+    <file alias="IgnSpinBox.qml">qml/IgnSpinBox.qml</file>
+    <file alias="qmldir">qml/qmldir</file>
+</qresource>
 </RCC>
