--- a/include/ignition/gui/resources.qrc
+++ b/include/ignition/gui/resources.qrc
@@ -21,7 +21,9 @@
   <file>qml/images/search.svg</file>
 </qresource>
 <qresource prefix="ign-gui-qml/ignition/gui">
-    <file alias="IgnSpinBox.qml">qml/IgnSpinBox.qml</file>
+    <!-- This qmldir file defines a QML module that can be imported -->
     <file alias="qmldir">qml/qmldir</file>
+    <!-- Add any QML components referenced in the qmldir file here -->
+    <file alias="IgnSpinBox.qml">qml/IgnSpinBox.qml</file>
 </qresource>
 </RCC>
