--- a/include/ignition/gui/resources.qrc
+++ b/include/ignition/gui/resources.qrc
@@ -9,6 +9,7 @@
   <file>qml/IgnRulers.qml</file>
   <file>qml/IgnSortFilterModel.qml</file>
   <file>qml/IgnSpinBox.qml</file>
+  <file>qml/IgnSnackBar.qml</file>
   <file>qml/IgnSplit.qml</file>
   <file>qml/Main.qml</file>
   <file>qml/PlottingInterface.qml</file>
@@ -28,5 +29,6 @@
     <file alias="qmldir">qml/qmldir</file>
     <!-- Add any QML components referenced in the qmldir file here -->
     <file alias="IgnSpinBox.qml">qml/IgnSpinBox.qml</file>
+    <file alias="IgnSnackBar.qml">qml/IgnSnackBar.qml</file>
 </qresource>
 </RCC>
