--- a/include/gz/gui/resources.qrc
+++ b/include/gz/gui/resources.qrc
@@ -3,14 +3,14 @@
   <file>qtquickcontrols2.conf</file>
 
   <file>qml/Chart.qml</file>
-  <file>qml/IgnCard.qml</file>
-  <file>qml/IgnCardSettings.qml</file>
-  <file>qml/IgnHelpers.qml</file>
-  <file>qml/IgnRulers.qml</file>
-  <file>qml/IgnSnackBar.qml</file>
-  <file>qml/IgnSortFilterModel.qml</file>
-  <file>qml/IgnSpinBox.qml</file>
-  <file>qml/IgnSplit.qml</file>
+  <file>qml/GzCard.qml</file>
+  <file>qml/GzCardSettings.qml</file>
+  <file>qml/GzHelpers.qml</file>
+  <file>qml/GzRulers.qml</file>
+  <file>qml/GzSnackBar.qml</file>
+  <file>qml/GzSortFilterModel.qml</file>
+  <file>qml/GzSpinBox.qml</file>
+  <file>qml/GzSplit.qml</file>
   <file>qml/Main.qml</file>
   <file>qml/PlottingInterface.qml</file>
   <file>qml/PluginMenu.qml</file>
@@ -23,12 +23,25 @@
   <file>qml/images/menu.png</file>
   <file>qml/images/export_icon.png</file>
   <file>qml/images/search.svg</file>
+
+  <file alias="qml/IgnCard.qml">qml/GzCard.qml</file>
+  <file alias="qml/IgnCardSettings.qml">qml/GzCardSettings.qml</file>
+  <file alias="qml/IgnHelpers.qml">qml/GzHelpers.qml</file>
+  <file alias="qml/IgnRulers.qml">qml/GzRulers.qml</file>
+  <file alias="qml/IgnSnackBar.qml">qml/GzSnackBar.qml</file>
+  <file alias="qml/IgnSortFilterModel.qml">qml/GzSortFilterModel.qml</file>
+  <file alias="qml/IgnSpinBox.qml">qml/GzSpinBox.qml</file>
+  <file alias="qml/IgnSplit.qml">qml/GzSplit.qml</file>
+  <file alias="IgnSnackBar.qml">qml/GzSnackBar.qml</file>
+  <file alias="IgnSpinBox.qml">qml/GzSpinBox.qml</file>
 </qresource>
 <qresource prefix="ign-gui-qml/ignition/gui">
     <!-- This qmldir file defines a QML module that can be imported -->
     <file alias="qmldir">qml/qmldir</file>
     <!-- Add any QML components referenced in the qmldir file here -->
-    <file alias="IgnSnackBar.qml">qml/IgnSnackBar.qml</file>
-    <file alias="IgnSpinBox.qml">qml/IgnSpinBox.qml</file>
+    <file alias="GzSnackBar.qml">qml/GzSnackBar.qml</file>
+    <file alias="GzSpinBox.qml">qml/GzSpinBox.qml</file>
+    <file alias="IgnSnackBar.qml">qml/GzSnackBar.qml</file>
+    <file alias="IgnSpinBox.qml">qml/GzSpinBox.qml</file>
 </qresource>
 </RCC>
