--- a/include/gz/gui/resources.qrc
+++ b/include/gz/gui/resources.qrc
@@ -18,7 +18,7 @@
   <file>qml/StandaloneDialog.qml</file>
   <file>qml/StyleDialog.qml</file>
 
-  <file>qml/images/ignition_logo_50x50.png</file>
+  <file>qml/images/gazebo_logo.png</file>
   <file>qml/images/drawer.png</file>
   <file>qml/images/menu.png</file>
   <file>qml/images/export_icon.png</file>
