add plotting common widget
Signed-off-by: youhy <haoyuan2019@outlook.com>

--- a/include/ignition/gui/resources.qrc
+++ b/include/ignition/gui/resources.qrc
@@ -4,6 +4,7 @@
 
   <file>qml/Chart.qml</file>
   <file>qml/GzColor.qml</file>
+  <file>qml/GzPlot.qml</file>
   <file>qml/GzPose.qml</file>
   <file>qml/GzVector3.qml</file>
   <file>qml/IgnCard.qml</file>
@@ -33,6 +34,7 @@
     <file alias="qmldir">qml/qmldir</file>
     <!-- Add any QML components referenced in the qmldir file here -->
     <file alias="GzColor.qml">qml/GzColor.qml</file>
+    <file alias="GzPlot.qml">qml/GzPlot.qml</file>
     <file alias="GzPose.qml">qml/GzPose.qml</file>
     <file alias="GzVector3.qml">qml/GzVector3.qml</file>
     <file alias="IgnSnackBar.qml">qml/IgnSnackBar.qml</file>
