--- a/include/ignition/gui/resources.qrc
+++ b/include/ignition/gui/resources.qrc
@@ -4,6 +4,7 @@
 
   <file>qml/Chart.qml</file>
   <file>qml/GzColor.qml</file>
+  <file>qml/GzPlotIcon.qml</file>
   <file>qml/GzPose.qml</file>
   <file>qml/GzVector3.qml</file>
   <file>qml/IgnCard.qml</file>
@@ -26,12 +27,14 @@
   <file>qml/images/menu.png</file>
   <file>qml/images/export_icon.png</file>
   <file>qml/images/search.svg</file>
+  <file>qml/images/plottable_icon.svg</file>
 </qresource>
 <qresource prefix="ign-gui-qml/ignition/gui">
     <!-- This qmldir file defines a QML module that can be imported -->
     <file alias="qmldir">qml/qmldir</file>
     <!-- Add any QML components referenced in the qmldir file here -->
     <file alias="GzColor.qml">qml/GzColor.qml</file>
+    <file alias="GzPlotIcon.qml">qml/GzPlotIcon.qml</file>
     <file alias="GzPose.qml">qml/GzPose.qml</file>
     <file alias="GzVector3.qml">qml/GzVector3.qml</file>
     <file alias="IgnSnackBar.qml">qml/IgnSnackBar.qml</file>
