--- a/include/gz/gui/resources.qrc
+++ b/include/gz/gui/resources.qrc
@@ -24,7 +24,9 @@
 
   <file>qml/images/gazebo_logo.png</file>
   <file>qml/images/drawer.png</file>
+  <file>qml/images/drawer_dark.png</file>
   <file>qml/images/menu.png</file>
+  <file>qml/images/menu_dark.png</file>
   <file>qml/images/export_icon.png</file>
   <file>qml/images/search.svg</file>
   <file>qml/images/plottable_icon.svg</file>
